# NewBlackbox

./: .gitattributes  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle  source.properties
.github/workflows/: android.yml
Bcore/: build.gradle  consumer-rules.pro  proguard-rules.pro
Bcore/src/main/: AndroidManifest.xml
Bcore/src/main/aidl/android/accounts/: IAccountAuthenticator.aidl  IAccountAuthenticatorResponse.aidl  IAccountManagerResponse.aidl
Bcore/src/main/aidl/android/app/: IServiceConnection.aidl
Bcore/src/main/aidl/android/content/: IIntentReceiver.aidl
Bcore/src/main/aidl/android/database/: IContentObserver.aidl
Bcore/src/main/aidl/top/niunaijun/blackbox/core/: IBActivityThread.aidl  IEmpty.aidl
Bcore/src/main/aidl/top/niunaijun/blackbox/entity/: AppConfig.aidl  JobRecord.aidl  UnbindRecord.aidl
Bcore/src/main/cpp/: BoxCore.cpp  BoxCore.h  CMakeLists.txt  IO.cpp  IO.h  Log.h  hidden_api.cpp  hidden_api.h  xdl.h
Bcore/src/main/cpp/Dobby/: dobby.h
Bcore/src/main/cpp/Dobby/arm64-v8a/: .gitkeep
Bcore/src/main/cpp/Dobby/armeabi-v7a/: .gitkeep
Bcore/src/main/cpp/Hook/: BaseHook.cpp  BaseHook.h  BinderHook.cpp  BinderHook.h  DexFileHook.cpp  DexFileHook.h  FileSystemHook.cpp  FileSystemHook.h  RuntimeHook.cpp  RuntimeHook.h  UnixFileSystemHook.cpp  UnixFileSystemHook.h  VMClassLoaderHook.cpp  VMClassLoaderHook.h
Bcore/src/main/cpp/JniHook/: ArtMethod.h  JniHook.cpp  JniHook.h
Bcore/src/main/cpp/Utils/: AntiDetection.cpp  AntiDetection.h  HexDump.cpp  HexDump.h  VirtualSpoof.cpp  VirtualSpoof.h  elf_util.cpp  elf_util.h
Bcore/src/main/cpp/xdl/: xdl.c  xdl.h  xdl.map.txt  xdl_iterate.c  xdl_iterate.h  xdl_linker.c  xdl_linker.h  xdl_lzma.c  xdl_lzma.h  xdl_util.c  xdl_util.h
Bcore/src/main/java/top/niunaijun/blackbox/: BlackBoxCore.java
Bcore/src/main/java/top/niunaijun/blackbox/app/: BActivityThread.java  LauncherActivity.java
Bcore/src/main/java/top/niunaijun/blackbox/core/: CrashHandler.java  GmsCore.java  IOCore.java  NativeCore.java
Bcore/src/main/java/top/niunaijun/blackbox/entity/: AppConfig.java  JobRecord.java  ServiceRecord.java  UnbindRecord.java
Bcore/src/main/java/top/niunaijun/blackbox/fake/: FakeCore.java
Bcore/src/main/java/top/niunaijun/blackbox/proxy/: ProxyActivity.java  ProxyActivity1.java  ProxyActivity2.java  ProxyActivity3.java  ProxyActivity4.java  ProxyBroadcastReceiver.java  ProxyContentProvider.java  ProxyJobService.java  ProxyManifest.java  ProxyService.java  ProxyService1.java  ProxyService2.java
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/top/niunaijun/blackboxa/app/: App.kt  AppManager.kt
app/src/main/java/top/niunaijun/blackboxa/bean/: AppInfo.kt  FakeLocationBean.kt  GmsBean.kt  InstalledAppBean.kt  XpModuleInfo.kt
app/src/main/java/top/niunaijun/blackboxa/core/: VirtualStorage.kt  VirtualStorageManager.kt
app/src/main/java/top/niunaijun/blackboxa/data/: AppsRepository.kt  AppsSortCompon.kt  (+2 more)
app/src/main/res/drawable/: ic_add.xml  ic_app_icon.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_device_apps.xml  activity_gms.xml  activity_list.xml  activity_main.xml  activity_osmdroid.xml  activity_setting.xml  fragment_apps.xml  fragment_device_apps.xml  item_app.xml  item_device_app.xml  item_fake_location.xml  item_gms.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: setting.xml
black-reflection/: build.gradle.kts
black-reflection/src/main/java/top/niunaijun/blackreflection/: BlackNullPointerException.java  BlackReflection.java
compiler/: build.gradle.kts
compiler/src/main/java/top/niunaijun/blackreflection/: BlackReflectionInfo.java  BlackReflectionInterfaceInfo.java  BlackReflectionProcessor.java
gradle/: libs.versions.toml
(+169 files in other folders)
